[Wasm-GC] Fix JS API casts for some top types https://bugs.webkit.org/show_bug.cgi?id=270374

Reviewed by Justin Michaud.

Fixes too-optimistic assumption about static validation for top type casts.

* JSTests/wasm/gc/js-api.js:
(testCastFailure):
* Source/JavaScriptCore/wasm/WasmTypeDefinition.cpp:
(JSC::Wasm::TypeInformation::castReference):

Canonical link: https://commits.webkit.org/276580@main